# browser

./: .env.example  .gitignore  manage.py  pyproject.toml
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: pytest.yml
browser/: main.py
config/: api.py  asgi.py  settings.py  urls.py
core/: admin.py  api.py  models.py  sites_github.py
src/api/: manage.py
src/api/config/: settings.py  wsgi.py
src/api/core/: admin.py
src/api/core/migrations/: 0001_initial.py
src/browser/: main.py
src/tests/: test_main.py
tests/: test_django.py  test_main.py
